[gd_scene load_steps=2 format=3 uid="uid://c6cmg77fwn7wb"]

[ext_resource type="Script" path="res://items_menu.gd" id="1_ynmp1"]

[node name="ItemsMenu" type="HBoxContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -90.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 50
script = ExtResource("1_ynmp1")

[node name="ApplesMenu" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="ApplesMenu"]
layout_mode = 2
size_flags_vertical = 3
color = Color(1, 0.12549, 0.0862745, 1)

[node name="SpinBox" type="SpinBox" parent="ApplesMenu"]
layout_mode = 2
value = 1.0

[node name="BrocolisMenu" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="BrocolisMenu"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0, 0.466667, 0, 1)

[node name="SpinBox" type="SpinBox" parent="BrocolisMenu"]
layout_mode = 2
value = 1.0

[node name="ItemsResultMenu" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
auto_translate = false

[node name="Label" type="Label" parent="ItemsResultMenu"]
layout_mode = 2
auto_translate = false
text = "Apples Text"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="ApplesMenu/SpinBox" to="." method="_on_apples_spin_box_value_changed"]
[connection signal="value_changed" from="BrocolisMenu/SpinBox" to="." method="_on_brocolis_spin_box_value_changed"]
